objects/vlocity_cmt__OrderPriceAdjustment__c.object
<CustomObject>
    <description>Represents a specific discount, fee, override price or charge applied to the overall order or to a specific line item. Used for write-in overrides, adjustments added through an applied promotion or any price, charge or fee identified for the order or line item. The price or adjustment indicates the action and sub-action requested such as adding or removing the price or adjustment as well as the date the change is requested to be applied. It also indicates the expected dates for any recurring but limited-time pricing.</description>
    <fields>
        <fullName>vlocity_cmt__Action__c</fullName>
        <description>The action requested in this order for this price, charge or adjustment with values such as Add, Change, Disconnect, Existing. Existing means no change requested.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AddedByUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the user who added this price, charge or adjustment; typically for write-in price adjustments.</description>
        <label>Added By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OrderPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdjustmentValue__c</fullName>
        <description>For write-in percentage adjustments, the percentage value of the adjustment. For example, 5 for a 5% discount. This value is null for pricing using a selected pricing element since the adjustment value is defined by the selected pricing element.</description>
        <label>Adjustment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Amount__c</fullName>
        <description>For write-in prices, the new or overriding amount. For example, $100 USD. This value is null for pricing using a selected pricing element since the pricing amount is defined by the selected pricing element.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AppliesTo__c</fullName>
        <description>Identifies to what the price, charge or adjustment will be applied: to a specific asset, to multiple assets, to a contract or to an account.</description>
        <label>Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Multiple Assets</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the account with billing/charging responsibility to which the price, charge or adjustment is applied.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Pricing</relationshipLabel>
        <relationshipName>OrderPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Order Pricing</relationshipLabel>
        <relationshipName>OrderPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EstimatedEndDate__c</fullName>
        <description>Estimated end date of this price, charge or adjustment given the request date.</description>
        <label>Estimated End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EstimatedStartDate__c</fullName>
        <description>Estimated start date of this price, charge or adjustment given the request date.</description>
        <label>Estimated Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FulfilmentStatus__c</fullName>
        <description>The status of fulfillment of this price, charge or adjustment with values such as Draft, In Progress, Activated, Superseded, Cancelled, Point of No Return, Pending.</description>
        <label>Fulfilment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>PONR</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderAppliedPromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For promotional pricing, identifies the applied promotion which provides this pricing.</description>
        <label>Applied Promotion</label>
        <referenceTo>vlocity_cmt__OrderAppliedPromotion__c</referenceTo>
        <relationshipName>OrderPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderId__c</fullName>
        <description>(Required) Identifies the parent order for this order price, charge or adjustment.</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>OrderPriceAdjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the line item (therefore asset) to which the price, charge or adjustment will be applied. Used when the price, charge or adjustment is applied to a specific asset.</description>
        <label>Order Item</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipName>OrderPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverrideDefinitionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Definition</label>
        <referenceTo>vlocity_cmt__OverrideDefinition__c</referenceTo>
        <relationshipLabel>Order Pricing</relationshipLabel>
        <relationshipName>OrderPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriceListEntryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Optional) Id of the source price list entry when the pricing is based on a price list entry.</description>
        <label>Price List Entry</label>
        <referenceTo>vlocity_cmt__PriceListEntry__c</referenceTo>
        <relationshipName>OrderPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingElementGlobalKey__c</fullName>
        <description>For selected prices, charges or adjustments, the global key identifier of the selected pricing element. This global key reference is used to point to the currently active pricing element version among all the versions of this pricing element.</description>
        <externalId>true</externalId>
        <label>Pricing Element Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingElementVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For selected prices, charges or adjustments, this identifies the pricing element version at the time it was selected.</description>
        <label>Pricing Element Version</label>
        <referenceTo>vlocity_cmt__PricingElement__c</referenceTo>
        <relationshipName>OrderPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingVariableCode__c</fullName>
        <description>Formula: The code of the price, charge or adjustment pricing variable. This value is null for pricing using a selected pricing element since that pricing variable is defined by the selected pricing element.</description>
        <formula>vlocity_cmt__PricingVariableId__r.vlocity_cmt__Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Variable Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingVariableId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the price, charge or adjustment pricing variable. Used for write-in price adjustments to identify the kind of price, charge or adjustment. This value is null for pricing using a selected pricing element since the pricing variable is defined by the selected pricing element.</description>
        <label>Pricing Variable</label>
        <referenceTo>vlocity_cmt__PricingVariable__c</referenceTo>
        <relationshipName>OrderPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Use the Applied Promotion (OrderAppliedPromotionId__c) field to identify the promotion which is the source of this price or adjustment.</description>
        <label>Promotion</label>
        <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
        <relationshipName>OrderPriceAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestDate__c</fullName>
        <description>Date requested for the application or cancellation of the customer&apos;s participation in this promotion.</description>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <description>Sequence in which this promotion is applied to the customer&apos;s asset or assets. Used to properly calculate discounted pricing.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Source__c</fullName>
        <description>The source of this price, charge or adjustment such as &quot;Agent&quot; for write-in adjustments, &quot;Promotion&quot; for promotional pricing, or &quot;Offer&quot; for offer-specific pricing.</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Policy Action</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubAction__c</fullName>
        <description>The sub-action requested in this order for this price, charge or adjustment with values such as Move or Cancel.</description>
        <label>Sub Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimePlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Plan</label>
        <referenceTo>vlocity_cmt__TimePlan__c</referenceTo>
        <relationshipLabel>Order Pricing</relationshipLabel>
        <relationshipName>OrderPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimePolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Policy</label>
        <referenceTo>vlocity_cmt__TimePolicy__c</referenceTo>
        <relationshipLabel>Order Pricing</relationshipLabel>
        <relationshipName>OrderPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Pricing</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>